Fixed an issue with the team banner being too small

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -81,7 +81,7 @@
     position: absolute;
     top: 0;
     padding: 20px 10px 10px 10px;
-    width: 10%;
+    width: 15%;
     height: 8%;
     text-align: center;
     border-bottom-right-radius: var(--common-radius);
@@ -90,7 +90,7 @@
 .project-team-right-corner-element {
     position: absolute;
     top: 0;
-    margin-left: 10%;
+    margin-left: 15%;
     margin-top: 10px;
     height: 50px;
     background-color: transparent;
